<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c2d1ce"
    tools:context=".SignInFisioActivity">

    <TextView
        android:id="@+id/tvTituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title_login"
        android:textColor="#36769E"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDni"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#547F9B"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="#36769E"
        android:textColorHint="#728E8D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloLogin" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#547F9B"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColor="#36769E"
        android:textColorHint="#728E8D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDni" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_entrar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#547F9B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_cuenta"
            android:textColor="#547F9B"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/link_registrarse"
            android:textColor="#36769E"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="53dp"
        android:layout_height="83dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Volver atrás"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back__v1_removebg_preview"
        app:tint="#36769E" />

</androidx.constraintlayout.widget.ConstraintLayout>