<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c2d1ce"
    tools:context=".SignInPacienteActivity">

    <TextView
        android:id="@+id/tvTituloLoginPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title_login"
        android:textColor="#5FA19D"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etDniPaciente"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_dni_paciente"
        android:backgroundTint="#547F9B"
        android:textColor="#36769E"
        android:textColorHint="#728E8D"
        app:layout_constraintTop_toBottomOf="@id/tvTituloLoginPaciente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPasswordPaciente"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:backgroundTint="#547F9B"
        android:textColor="#36769E"
        android:textColorHint="#728E8D"
        app:layout_constraintTop_toBottomOf="@id/etDniPaciente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnEntrarPaciente"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_entrar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#7AB5B2"
        app:layout_constraintTop_toBottomOf="@id/etPasswordPaciente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnBackPaciente"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/volver_atras"
        app:srcCompat="@drawable/back__v1_removebg_preview"
        app:tint="#36769E"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>